# bundle_adjustment

./: CMakeLists.txt  README.Md  README.md
app/: tese_bundle_adjustment.cpp
src/: base_edge.cpp  base_edge.h  base_vatex.cpp  base_vatex.h  edge_reprojection.cpp  edge_reprojection.h  optimizer.cpp  optimizer.h  vertex_point.cpp  vertex_point.h  vertex_pose.cpp  vertex_pose.h
